# doors-bot

./: .gitignore  Makefile  env_vars  pyproject.toml  requirements.txt  setup.cfg  test.py
accounts/: apps.py  models.py
accounts/migrations/: 0002_auto_20211225_2137.py  0003_auto_20220116_1355.py  0004_auto_20220218_0921.py
bot_init/: apps.py  models.py  service.py  urls.py  utils.py  views.py
bot_init/management/commands/: start.py  update_webhook.py
bot_init/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/splitted_settings/: boilerplate.py  bot.py  installed_apps.py
deploy/: doors_nginx.conf  gunicorn.conf.py  restart.sh  supervisor_doors.conf
orders/: apps.py  models.py
orders/migrations/: 0001_initial.py
tests/: test_customer_registration.py  test_user_select.py
